Link to scm modified

--- a/data/json/project-info.json
+++ b/data/json/project-info.json
@@ -4,7 +4,7 @@
 "irc_name": "",
 "irc_type": "",
 "irc_url": "",
-"its_name": "Tickets",
+"its_name": "Jira Tickets",
 "its_type": "",
 "its_url": "https://tickets.puppetlabs.com",
 "mediawiki_name": "",
@@ -16,9 +16,9 @@
 "producer": "Automator",
 "project_name": "PuppetLabs",
 "project_url": "http://puppetlabs.com/",
-"scm_name": "Git",
+"scm_name": "Git repositories",
 "scm_type": "git",
-"scm_url": "https://github.com/puppetlabs/",
+"scm_url": "http://puppetlabs.com/puppet/puppet-open-source",
 "scr_name": "",
 "scr_type": "",
 "scr_url": ""
