Fix project meta data

--- a/data/json/project-info.json
+++ b/data/json/project-info.json
@@ -1,11 +1,11 @@
 {
 "date":"",
-"project_name" :"PuppetLabs Community Metrics", 
-"project_url" :"http://puppetlabs.com/puppet/puppet-open-source",
+"project_name" :"PuppetLabs",
+"project_url":"http://puppetlabs.com/puppet/puppet-open-source",
 "scm_url":"https://github.com/puppetlabs",
 "scm_name":"Git",
 "scm_type":"git",
-"its_url":"https://tickets.puppetlabs.com/secure/Dashboard.jspa",
+"its_url":"https://tickets.puppetlabs.com",
 "its_name":"Tickets",
 "its_type":"",
 "mls_url":"http://puppetlabs.com/community/participate",
