Restore project's metadata

--- a/data/json/project-info.json
+++ b/data/json/project-info.json
@@ -1,14 +1,14 @@
 {
 "date":"",
-"project_name" :"Project template", 
-"project_url" :"http://incubator.apache.org/allura/",
-"scm_url":"https://github.com/apache/incubator-allura",
-"scm_name":"git://git.apache.org/incubator-allura.git",
+"project_name" :"PuppetLabs",
+"project_url":"http://puppetlabs.com/puppet/puppet-open-source",
+"scm_url":"https://github.com/puppetlabs",
+"scm_name":"Git",
 "scm_type":"git",
-"its_url":"http://sourceforge.net/p/allura/tickets/",
+"its_url":"https://tickets.puppetlabs.com",
 "its_name":"Tickets",
 "its_type":"",
-"mls_url":"http://incubator.apache.org/allura/mailing-lists.html",
+"mls_url":"http://puppetlabs.com/community/participate",
 "mls_name":"Mailing lists",
 "mls_type":"mailman",
 "producer":"",
