Revert "Updated to last version of VizGrimoireJS."
This reverts commit a93303c004e392445edc40745514bae0cb680428.

--- a/browser/config/project-info.json
+++ b/browser/config/project-info.json
@@ -1,14 +1,14 @@
 {
 "date":"",
-"project_name" :"PuppetLabs",
-"project_url":"http://puppetlabs.com/puppet/puppet-open-source",
-"scm_url":"https://github.com/puppetlabs",
-"scm_name":"Git",
+"project_name" :"Puppet Labs Community", 
+"project_url" :"http://incubator.apache.org/allura/",
+"scm_url":"https://github.com/apache/incubator-allura",
+"scm_name":"git://git.apache.org/incubator-allura.git",
 "scm_type":"git",
-"its_url":"https://tickets.puppetlabs.com",
+"its_url":"http://sourceforge.net/p/allura/tickets/",
 "its_name":"Tickets",
 "its_type":"",
-"mls_url":"http://puppetlabs.com/community/participate",
+"mls_url":"http://incubator.apache.org/allura/mailing-lists.html",
 "mls_name":"Mailing lists",
 "mls_type":"mailman",
 "producer":"",
